Use free music because Formation got taken down

--- a/public/views/formation.html
+++ b/public/views/formation.html
@@ -3,15 +3,15 @@
 <html>
   <head>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <script src="./utils.js"></script>
-    <script src="./library.js"></script>
-    <script src="./album.js"></script>
-    <script src="./song.js"></script>
-    <script src="./formation.js"></script>
+    <script src="/scripts/utils.js"></script>
+    <script src="/scripts/library.js"></script>
+    <script src="/scripts/album.js"></script>
+    <script src="/scripts/song.js"></script>
+    <script src="/scripts/formation.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:300,400,600,700" rel="stylesheet">
 
-    <link href="./formation.css" rel="stylesheet">
-    <link href="./ranger.css" rel="stylesheet">
+    <link href="/styles/formation.css" rel="stylesheet">
+    <link href="/styles/ranger.css" rel="stylesheet">
     <link href="https://file.myfontastic.com/mX3qvFmFFF9Z8m3mU7ePjF/icons.css" rel="stylesheet">
   </head>
   <body>
@@ -21,7 +21,7 @@
         data-artist="Beyoncé"
         data-track="1"
         data-album="Formation"
-        src="http://newscult.com/wp-content/uploads/2016/04/01.-Pray-You-Catch-Me.mp3?_=13"
+        src="http://www.bensound.org/bensound-music/bensound-dubstep.mp3"
         type="audio/mpeg">
       </audio>
 
@@ -29,7 +29,8 @@
         data-title="Hold Up"
         data-artist="Beyoncé"
         data-album="Formation"
-        data-track="2" src="http://newscult.com/wp-content/uploads/2016/04/02.-Hold-Up.mp3?_=14"
+        data-track="2"
+        src="http://www.bensound.org/bensound-music/bensound-cute.mp3"
         type="audio/mpeg">
       </audio>
 
@@ -38,14 +39,14 @@
         data-artist="Beyoncé"
         data-track="3"
         data-album="Formation"
-        src="http://newscult.com/wp-content/uploads/2016/04/03.-Dont-Hurt-Yourself-Ft.-Jack-White-.mp3?_=15" type="audio/mpeg">
+        src="http://www.bensound.org/bensound-music/bensound-littleidea.mp3" type="audio/mpeg">
       </audio>
 
       <audio
         data-title="Sorry"
         data-artist="Beyoncé"
         data-album="Formation"
-        data-track="4" src="http://newscult.com/wp-content/uploads/2016/04/04.-Sorry.mp3?_=16"
+        data-track="4" src="http://www.bensound.org/bensound-music/bensound-acousticbreeze.mp3"
         type="audio/mpeg">
       </audio>
 
@@ -53,7 +54,7 @@
         data-title="6 Inch (Ft. The Weeknd)"
         data-artist="Beyoncé"
         data-album="Formation"
-        data-track="5" src="http://newscult.com/wp-content/uploads/2016/04/05.-6-Inch-Ft.-The-Weeknd.mp3?_=17"
+        data-track="5" src="http://www.bensound.org/bensound-music/bensound-epic.mp3"
         type="audio/mpeg">
       </audio>
 
@@ -62,7 +63,7 @@
         data-artist="Beyoncé"
         data-album="Formation"
         data-track="6"
-        src="http://newscult.com/wp-content/uploads/2016/04/06.-Daddy-Lessons.mp3?_=18"
+        src="http://www.bensound.org/bensound-music/bensound-buddy.mp3"
         type="audio/mpeg">
       </audio>
 
@@ -71,7 +72,7 @@
         data-artist="Beyoncé"
         data-album="Formation"
         data-track="7"
-        src="http://newscult.com/wp-content/uploads/2016/04/07.-Love-Drought.mp3?_=19"
+        src="http://www.bensound.org/bensound-music/bensound-happiness.mp3"
         type="audio/mpeg">
       </audio>
 
@@ -80,7 +81,7 @@
         data-artist="Beyoncé"
         data-album="Formation"
         data-track="8"
-        src="http://newscult.com/wp-content/uploads/2016/04/08.-Sandcastles.mp3?_=20"
+        src="http://www.bensound.org/bensound-music/bensound-smallguitar.mp3"
         type="audio/mpeg">
       </audio>
 
@@ -89,7 +90,7 @@
         data-artist="Beyoncé"
         data-album="Formation"
         data-track="9"
-        src="http://newscult.com/wp-content/uploads/2016/04/09.-Forward-Ft.-James-Blake.mp3?_=21"
+        src="http://www.bensound.org/bensound-music/bensound-memories.mp3"
         type="audio/mpeg">
       </audio>
 
@@ -98,7 +99,7 @@
         data-artist="Beyoncé"
         data-track="11"
         data-album="Formation"
-        src="http://newscult.com/wp-content/uploads/2016/04/11.-All-Night.mp3?_=23"
+        src="http://www.bensound.org/bensound-music/bensound-sunny.mp3"
         type="audio/mpeg">
       </audio>
 
@@ -106,7 +107,7 @@
         data-title="Freedom (Ft. Kendrick Lamar)"
         data-artist="Beyoncé"
         data-album="Formation"
-        data-track="10" src="http://newscult.com/wp-content/uploads/2016/04/10.-Freedom-Ft.-Kendrick-Lamar.mp3?_=22"
+        data-track="10" src="http://www.bensound.org/bensound-music/bensound-tenderness.mp3"
         type="audio/mpeg">
       </audio>
 
@@ -114,7 +115,7 @@
         data-title="Formation"
         data-artist="Beyoncé"
         data-album="Formation"
-        data-track="12" src="http://newscult.com/wp-content/uploads/2016/04/12.-Formation.mp3?_=24"
+        data-track="12" src="http://www.bensound.org/bensound-music/bensound-memories.mp3"
         type="audio/mpeg">
       </audio>
 
